# emotional_chat

./: .$第7章_Codex最小控制栈.drawio.bkp  .$第8章_Harness式能力系统升级路线.drawio.bkp  .bandit  .gitignore  AGENT_README.md  Dockerfile  INSTALL.md  LICENSE  Makefile  PERSONALIZATION_DEPLOYMENT_GUIDE.md  PERSONALIZATION_STATUS.md  PYTHON310_INSTALL.md  README.en.md  README.md  alembic.ini  config.env  config.env.example  config.py  db_manager.py  demo_agent.py  demo_rag_comparison.py  docker-compose.yml  env_example.txt  init_rag_knowledge.py  main.py  pyproject.toml  quick_start.py  quick_start_evaluation.sh  requirements-py310.txt  requirements.txt  restart_services.sh  run.ps1  run_backend.py  setup_database.py  setup_macbook.sh  simple_backend.py  start.sh  start_services.sh  test.md  test_agent.py  (+30 more)
Prompt优化测试/: ab_test_demo_20251014_131813.json  ab_test_demo_20251014_131813_analysis.txt  ab_test_demo_20251014_131813_evaluation.csv  ab_test_demo_20251014_131813_visualization.txt
alembic/: README  env.py
backend/: app.py  chat_engine.py  context_assembler.py  database.py  dependencies.py  emotion_analyzer.py  evaluation_engine.py  feedback_analyzer.py  langchain_chat_engine.py  logging_config.py  main.py  memory_extractor.py  memory_manager.py  models.py  multimodal_services.py  prompt_optimizer.py  simple_chat_engine.py  simple_langchain_engine.py  vector_store.py  xinyu_prompt.py
docs/: API接口文档.md  Agent_Skills_MCP关系说明.md  Agent技术架构完整指南.md  Agent核心模块实现总结.md  Docker构建加速指南.md  MACBOOK_SETUP.md  MCP上下文集成说明.md  MCP协议说明.md  MCP流程验证.md  MCP集成总结.md  PRD-Codex-风格情感陪伴工作台.md  Prompt流程.md  RAG实施步骤.md  Windows运行指南.md  codex_learning_map.md  codex_learning_map.xmind  codex_pdf_outline.txt  codex_use_cases_map.xmind  codex_use_cases_map_utf8_raw_backup.xmind  evaluation_prompt_optimization_loop.mermaid  evaluation_scoring_dimensions.mermaid  evaluation_system_architecture.mermaid  evaluation_system_guide.md  evaluation_workflow.txt  feedback_optimization_cycle.mermaid  feedback_types_analysis.mermaid  gitignore_数据库迁移.txt  performance_optimization.md  performance_optimization_guide.md  plugin_system_guide.md  plugin_system_update.md  user_feedback_flow.mermaid  weather_plugin_documentation.md  上下文管理代码结构与流程.md  个性化配置_README.md  个性化配置_快速开始.md  个性化配置功能文档.md  前端-Codex-风格升级计划.md  加入上下文的架构.md  反馈系统功能说明.md  (+28 more)
examples/: intent_recognition_demo.py  performance_optimization_example.py  response_generation_example.py
figures/: .$图10-1_聊天请求到KeyError的数据流.drawio.bkp  .$图10-3_AI时代的测试金字塔.drawio.bkp  .$图10-4_行覆盖率与变异得分对比.drawio.bkp  .$图10-5_测试影响分析的基本流程.drawio.bkp  .$图10-6_OpenAPI契约测试链路.drawio.bkp  .$图11-1_API契约的自动化链路.drawio.bkp  .$图11-2_数据库迁移五阶段安全发布计划.drawio.bkp  .$图11-3_跨层一致性检查链路.drawio.bkp  .$图11-4_跨前后端发布安全时序.drawio.bkp  .$图12-1_CI自修复闭环.drawio.bkp  .$图12-2_CodexReview三处触发点.drawio.bkp  .$图12-4_AI辅助GitOps审批闭环.drawio.bkp  .$图14-1_模型不稳定失败拆解.drawio.bkp  图10-4_行覆盖率与变异得分对比.drawio  图11-1_API契约的自动化链路.drawio  图11-2_数据库迁移五阶段安全发布计划.drawio  图12-3_安全扫描混合架构.drawio
frontend/: .env.development  .env.example  package-lock.json  package.json  start_frontend.sh  stop_frontend.sh
scripts/: README.md  build_codex_learning_map_xmind.py  build_codex_use_cases_xmind.py  db_manager.py  demo_agent.py  init_rag_knowledge.py  (+9 more)
(+260 files in other folders)
