[project]
name = "emotional-chat"
version = "3.0.0"
description = "心语情感陪伴机器人 - 基于阿里云通义千问的智能情感支持聊天机器人"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "emotional_chat", email = "congdeyuan@gmail.com"}
]
keywords = ["chatbot", "emotional-support", "ai", "qwen", "langchain", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# 核心框架
dependencies = [
    # 核心框架
    "fastapi>=0.83.0",
    "uvicorn[standard]>=0.17.0",
    "pydantic>=1.9.2,<2.0.0",
    "python-dotenv>=0.20.0",
    "requests>=2.25.0",
    
    # LLM和LangChain
    "openai>=1.26.0,<2.0.0",
    "langchain>=0.2.0,<0.3.0",
    "langchain-openai>=0.1.10,<0.2.0",
    "langchain-community>=0.0.1,<0.3.0",
    "pandas>=2.0.0",
    
    # 向量数据库
    "chromadb>=0.4.22,<0.5.0",
    "sentence-transformers>=2.7.0",
    
    # 数据库
    "PyMySQL>=1.1.0",
    "sqlalchemy>=1.4.0,<2.0.0",
    "alembic>=1.8.0",
    
    # 文档处理
    "python-multipart>=0.0.9",
    "pypdf>=3.0.0",
    
    # 依赖冲突修复
    "idna>=2.10",
    "anyio>=3.0.0",
    "sniffio>=1.3.0",
    "httpx>=0.25.0,<0.28.0",
    "protobuf>=3.19.0,<=3.20.3",
    
    # 多模态功能依赖
    # 语音识别和合成
    "openai-whisper>=20230314",
    "pydub>=0.25.1",
    "noisereduce>=2.0.0",
    "librosa>=0.9.0",
    "soundfile>=0.12.0",
    
    # 图像处理和分析
    "Pillow>=9.0.0",
    "opencv-python>=4.5.0",
    "deepface>=0.0.79",
    "face-recognition>=1.3.0",
    "pytesseract>=0.3.10",
    
    # 阿里云SDK
    "aliyun-python-sdk-core>=2.15.0",
    "aliyun-python-sdk-imageprocess>=2.0.0",
    "aliyun-python-sdk-ocr>=1.0.0",
    
    # 音频处理
    "gTTS>=2.5.0",
    
    # 其他多模态依赖
    "numpy>=1.21.0,<1.24.0",
    "jieba>=0.42.1",
    
    # 其他必要依赖
    "beautifulsoup4>=4.9.0",
    "PyPDF2>=2.0.0",
    "feedparser>=5.2.0",
    
    # 额外依赖
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
# 可选依赖（保留用于兼容性，推荐使用 dependency-groups）
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/congde/emotional_chat"
Documentation = "https://github.com/congde/emotional_chat#readme"
Repository = "https://github.com/congde/emotional_chat.git"
Issues = "https://github.com/congde/emotional_chat/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# uv 特定配置

[tool.uv.sources]
# 可以在这里指定自定义源，例如阿里云镜像
# 注意：uv 默认使用官方 PyPI，如需使用镜像源，可以在命令行使用 --index-url

[dependency-groups]
# 开发依赖组（替代已弃用的 tool.uv.dev-dependencies）
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

